# retroviral-wall-postmortem

./: .gitignore  CALL_PREP.md  LOOM_SCRIPT.md  README.md  WRITEUP.md  pyproject.toml
mandrake_bench/: __init__.py  active.py  audit.py  baselines.py  cv.py  identity_probe.py  metrics.py  report.py  structural.py
notebooks/: 01_baselines.py  02_novel_model.py  03_smart_rf.py  04_day2_stack.py  05_audit_synthetic_perfect.py  06_identity_proximity.py  07_push_past_055.py  08_push_harder.py  09_seq_identity_features.py  10_kaggle_submission.py
results/: 01_all_inactive.md  01_all_inactive_predictions.csv  01_esm_logreg.md  01_esm_logreg_predictions.csv  01_random.md  01_random_predictions.csv  01_rf_handcrafted_clf.md  01_rf_handcrafted_clf_predictions.csv  01_rf_handcrafted_reg.md  01_rf_handcrafted_reg_predictions.csv  01_summary.csv  02_ensemble_clf+reg_nofoldseek.md  02_ensemble_clf+reg_nofoldseek_predictions.csv  02_ensemble_triple.md  02_ensemble_triple_predictions.csv  02_esm_orth_logreg.md  02_esm_orth_logreg_predictions.csv  02_lgbm_clf_allfeat.md  02_lgbm_clf_allfeat_predictions.csv  02_lgbm_clf_nofoldseek.md  02_lgbm_clf_nofoldseek_predictions.csv  02_lgbm_reg_allfeat.md  02_lgbm_reg_allfeat_predictions.csv  02_lgbm_reg_nofoldseek.md  02_lgbm_reg_nofoldseek_predictions.csv  02_summary.csv  03_combo_RFbio_ESMpca.md  03_combo_RFbio_ESMpca_predictions.csv  03_esm_pca1_logreg.md  03_esm_pca1_logreg_predictions.csv  03_esm_pca3_logreg.md  03_esm_pca3_logreg_predictions.csv  03_esm_pca5_logreg.md  03_esm_pca5_logreg_predictions.csv  03_esm_pca7_logreg.md  (+54 more)
(+1 files in other folders)
