[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mandrake-bench"
version = "0.1.0"
description = "LOFO evaluation + methodology-audit harness for Mandrake-style open problems on small biology datasets."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Dhairya Shah", email = "dhairyarup@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "biopython>=1.81",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]
extras = ["lightgbm>=4.0", "xgboost>=2.0"]

[project.urls]
"Homepage" = "https://github.com/DhairyaShah981/retroviral-wall-postmortem"

[tool.setuptools.packages.find]
include = ["mandrake_bench*"]
exclude = ["tests*", "notebooks*", "results*"]
